tests/ui/lifetimes/lifetime-elision-return-type-trait.stderr
error[E0277]: the trait bound `Result<(), _>: Future` is not satisfied
  --> $DIR/lifetime-elision-return-type-trait.rs:8:13
   |
LL | fn foo() -> impl Future<Item=(), Error=Box<dyn Error>> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Future` is not implemented for `Result<(), _>`
LL |
LL |     Ok(())
   |     ------ return type was inferred to be `Result<(), _>` here
   |
help: item with same name found
  --> $SRC_DIR/std/src/sync/barrier.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/../../stdarch/crates/core_arch/src/x86/cpuid.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mod.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: this trait has no implementations, consider adding one
  --> $DIR/lifetime-elision-return-type-trait.rs:1:1
   |
LL | trait Future {
   | ^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
